WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97458
[GTK] WebKitWebView:is-loading is not updated when the is loaded is started by link clicked navigation action
https://bugs.webkit.org/show_bug.cgi?id=97458
Summary
[GTK] WebKitWebView:is-loading is not updated when the is loaded is started b...
Carlos Garcia Campos
Reported
2012-09-24 08:57:15 PDT
We are setting it to true when the load is started by using the API
Attachments
Patch
(5.75 KB, patch)
2012-09-24 09:03 PDT
,
Carlos Garcia Campos
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-09-24 09:03:35 PDT
Created
attachment 165394
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-24 09:08:04 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Xan Lopez
Comment 3
2012-09-24 09:25:29 PDT
Comment on
attachment 165394
[details]
Patch Yeah, much better.
Carlos Garcia Campos
Comment 4
2012-09-24 09:31:52 PDT
Committed
r129380
: <
http://trac.webkit.org/changeset/129380
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug