third_party/WebKit/Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp
@@ -1156,7 +1156,9 @@ static void setCertificateToMainResource(WebKitWebView* webView)
 
 static void webkitWebViewEmitLoadChanged(WebKitWebView* webView, WebKitLoadEvent loadEvent)
 {
-    if (loadEvent == WEBKIT_LOAD_FINISHED) {
+    if (loadEvent == WEBKIT_LOAD_STARTED)
+        webkitWebViewSetIsLoading(webView, true);
+    else if (loadEvent == WEBKIT_LOAD_FINISHED) {
         webkitWebViewSetIsLoading(webView, false);
         webView->priv->waitingForMainResource = false;
         webkitWebViewDisconnectMainResourceResponseChangedSignalHandler(webView);
@@ -1562,7 +1564,6 @@ void webkit_web_view_load_uri(WebKitWebView* webView, const gchar* uri)
     WKRetainPtr<WKURLRef> url(AdoptWK, WKURLCreateWithUTF8CString(uri));
     WebPageProxy* page = webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView));
     WKPageLoadURL(toAPI(page), url.get());
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
@@ -1590,7 +1591,6 @@ void webkit_web_view_load_html(WebKitWebView* webView, const gchar* content, con
     WKRetainPtr<WKStringRef> contentRef(AdoptWK,  WKStringCreateWithUTF8CString(content));
     WKRetainPtr<WKURLRef> baseURIRef = baseURI ? adoptWK(WKURLCreateWithUTF8CString(baseURI)) : 0;
     WKPageLoadHTMLString(toAPI(page), contentRef.get(), baseURIRef.get());
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
@@ -1617,7 +1617,6 @@ void webkit_web_view_load_alternate_html(WebKitWebView* webView, const gchar* co
     WKRetainPtr<WKURLRef> baseURL = baseURI ? adoptWK(WKURLCreateWithUTF8CString(baseURI)) : 0;
     WebPageProxy* page = webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView));
     WKPageLoadAlternateHTMLString(toAPI(page), htmlString.get(), baseURL.get(), contentURL.get());
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
@@ -1637,7 +1636,6 @@ void webkit_web_view_load_plain_text(WebKitWebView* webView, const gchar* plainT
     WebPageProxy* page = webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView));
     WKRetainPtr<WKStringRef> plainTextRef(AdoptWK, WKStringCreateWithUTF8CString(plainText));
     WKPageLoadPlainTextString(toAPI(page), plainTextRef.get());
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
@@ -1658,7 +1656,6 @@ void webkit_web_view_load_request(WebKitWebView* webView, WebKitURIRequest* requ
     WKRetainPtr<WKURLRequestRef> wkRequest(AdoptWK, WKURLRequestCreateWithWKURL(wkURL.get()));
     WebPageProxy* page = webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView));
     WKPageLoadURLRequest(toAPI(page), wkRequest.get());
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
@@ -1690,7 +1687,6 @@ void webkit_web_view_reload(WebKitWebView* webView)
     g_return_if_fail(WEBKIT_IS_WEB_VIEW(webView));
 
     WKPageReload(toAPI(webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView))));
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
@@ -1705,7 +1701,6 @@ void webkit_web_view_reload_bypass_cache(WebKitWebView* webView)
     g_return_if_fail(WEBKIT_IS_WEB_VIEW(webView));
 
     WKPageReloadFromOrigin(toAPI(webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView))));
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
@@ -1758,7 +1753,6 @@ void webkit_web_view_go_back(WebKitWebView* webView)
     g_return_if_fail(WEBKIT_IS_WEB_VIEW(webView));
 
     WKPageGoBack(toAPI(webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView))));
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
@@ -1789,7 +1783,6 @@ void webkit_web_view_go_forward(WebKitWebView* webView)
     g_return_if_fail(WEBKIT_IS_WEB_VIEW(webView));
 
     WKPageGoForward(toAPI(webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView))));
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
@@ -1963,7 +1956,6 @@ void webkit_web_view_go_to_back_forward_list_item(WebKitWebView* webView, WebKit
 
     WKPageGoToBackForwardListItem(toAPI(webkitWebViewBaseGetPage(WEBKIT_WEB_VIEW_BASE(webView))),
                                   webkitBackForwardListItemGetWKItem(listItem));
-    webkitWebViewSetIsLoading(webView, true);
 }
 
 /**
